all page scroll system changes

--- a/src/views/partials/account_body.hbs
+++ b/src/views/partials/account_body.hbs
@@ -1,5 +1,5 @@
-<div class="container min-h-screen bg-primary-0 pb-[75px]">
-    <div class="back-area max-w-[450px] mx-auto fixed top-0 right-0 left-0 w-full px-[28px] pt-[20px] flex items-center justify-center bg-primary-0">
+<div class="container h-screen bg-primary-0 pb-[75px]">
+    <div class="back-area max-w-[450px] mx-auto relative w-full px-[28px] pt-[20px] pb-[10px] flex items-center justify-center bg-primary-0">
         <div class="back-area-icon absolute left-[28px] top-[20px]">
             <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
         </div>
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="section-account pb-4 px-[28px] pt-[67px]">
+    <div class="section-account pb-4 px-[28px] pt-[4px] h-[calc(100vh-137px)] overflow-y-auto no-scrollbar">
         <div class="section-account-main">
             <div class="user-profile">
                 {{> components/user_profile}}
