--- a/src/views/partials/components/recent_post_card.hbs
+++ b/src/views/partials/components/recent_post_card.hbs
@@ -34,3 +34,77 @@
 </div>
 
 </a>
+
+<a href="recentPostDetails.html">
+    <div class="recent-post-card pb-[16px] ">
+    <div class="recent-post-title px-[20px] mb-[11px]">
+        <h3 class="font-satoshi font-bold text-primary-10 text-[20px]/[32px]">The Miracle Comeback: How
+            Argentina Defied the Odds ⚽️🌟</h3>
+    </div>
+    <div class="recent-post-img">
+        <img class="block w-full" src="/images/png/Articles.png" alt="">
+    </div>
+    <div class="recent-post-body  px-[20px]">
+        <div class="recent-body-main py-[11px] border-b border-primary-0.6 border-solid">
+            <p class="font-satoshi font-medium not-italic text-primary-1 text-[14px]/[20px] mb-4">Get ready to
+                witness the stuff of legends! Picture this: Argentina trailing by two goals with only
+                minutes left on the clock. The odds seemed insurmountable, but our players refused to give
+                up. <a href="#" class="text-primary">Read more</a></p>
+            <div class="post-reaction-area flex items-center justify-between gap-2">
+                <div class="post-reaction-left">
+                    <span class="font-satoshi font-medium not-italic text-primary-1 text-sm/[24px]">5 hours
+                        ago</span>
+                </div>
+                <div class="post-reaction-right">
+                    <ul class="flex items-center justify-end gap-4">
+                        <li
+                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
+                            6 <img src="/images/svg/like.svg" alt=""></li>
+                        <li
+                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
+                            10 <img src="/images/svg/comment.svg" alt=""></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</a>
+
+<a href="recentPostDetails.html">
+    <div class="recent-post-card pb-[16px] ">
+    <div class="recent-post-title px-[20px] mb-[11px]">
+        <h3 class="font-satoshi font-bold text-primary-10 text-[20px]/[32px]">The Miracle Comeback: How
+            Argentina Defied the Odds ⚽️🌟</h3>
+    </div>
+    <div class="recent-post-img">
+        <img class="block w-full" src="/images/png/Articles.png" alt="">
+    </div>
+    <div class="recent-post-body  px-[20px]">
+        <div class="recent-body-main py-[11px] border-b border-primary-0.6 border-solid">
+            <p class="font-satoshi font-medium not-italic text-primary-1 text-[14px]/[20px] mb-4">Get ready to
+                witness the stuff of legends! Picture this: Argentina trailing by two goals with only
+                minutes left on the clock. The odds seemed insurmountable, but our players refused to give
+                up. <a href="#" class="text-primary">Read more</a></p>
+            <div class="post-reaction-area flex items-center justify-between gap-2">
+                <div class="post-reaction-left">
+                    <span class="font-satoshi font-medium not-italic text-primary-1 text-sm/[24px]">5 hours
+                        ago</span>
+                </div>
+                <div class="post-reaction-right">
+                    <ul class="flex items-center justify-end gap-4">
+                        <li
+                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
+                            6 <img src="/images/svg/like.svg" alt=""></li>
+                        <li
+                            class="flex items-center justify-end gap-1 font-satoshi font-medium not-italic text-primary-1 text-sm/[20px]">
+                            10 <img src="/images/svg/comment.svg" alt=""></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</a>
