--- a/src/views/partials/index_body.hbs
+++ b/src/views/partials/index_body.hbs
@@ -1,16 +1,15 @@
-<div class="container min-h-screen  bg-primary-0">
+<div class="container h-screen bg-primary-0">
     <div class="section">
-        <div class="section-top text-right pt-[20px] pr-[27px] mb-[28px]">
+        <div class="section-top text-right pt-[20px] pb-[10px] pr-[27px] ">
             <span class="font-satoshi font-bold text-primary block cursor-pointer text-[15px]/[20px]">Skip</span>
         </div>
-        <div class="section-main">
-
+        <div class="section-main h-[calc(100vh-50px)] overflow-y-auto no-scrollbar pt-[18px]">
             <div class="carousel">
                 {{> components/carousels/carousel}}
             </div>
 
 
-            <div class="section-body py-[28px] sm:px-7 px-4 text-center">
+            <div class="section-body py-[28px] px-[27px] text-center">
                 <h3 class="font-satoshi font-bold not-italic text-primary-10 text-26/[44px] mb-[12px]">Next to view live
                     scores</h3>
                 <p class="text-primary-1 text-[14px]/[20px] font-medium font-satoshi max-w-[280px] m-auto">In-depth
