--- a/src/views/partials/notice_details_body.hbs
+++ b/src/views/partials/notice_details_body.hbs
@@ -1,5 +1,5 @@
-<div class="container min-h-screen bg-primary-0 pb-[10px]">
-    <div class="back-area max-w-[450px] mx-auto fixed top-0 right-0 left-0 w-full px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
+<div class="container h-screen bg-primary-0">
+    <div class="back-area max-w-[450px] mx-auto relative w-full px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
         <div class="back-area-icon absolute left-[28px] top-[15px]">
             <a href="noticeList.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="section-details px-[25px] pt-[65px] pb-[10px]">
+    <div class="section-details px-[25px] pt-[12px] pb-[20px] h-[calc(100vh-53px)] overflow-y-auto no-scrollbar">
         <div class="section-details-main">
 
             <div class="notice-details-img mb-3">
@@ -56,5 +56,4 @@
 
         </div>
     </div>
-    <div class="gradient-shape bg-bottom-gradient w-full fixed bottom-0 left-0 h-11"></div>
 </div>
