--- a/src/views/partials/notice_list_body.hbs
+++ b/src/views/partials/notice_list_body.hbs
@@ -1,5 +1,5 @@
-<div class="container min-h-screen bg-primary-0 pb-[10px]">
-    <div class="back-area max-w-[450px] mx-auto fixed top-0 right-0 left-0 w-full px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
+<div class="container h-screen bg-primary-0">
+    <div class="back-area max-w-[450px] mx-auto w-full relative px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
         <div class="back-area-icon absolute left-[28px] top-[15px]">
             <a href="account.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
@@ -9,7 +9,7 @@
     </div>
 
 
-    <div class="section-list  px-[25px] pt-[65px] pb-[10px]">
+    <div class="section-list  px-[25px] pt-[12px] pb-[20px] h-[calc(100vh-53px)] overflow-y-auto no-scrollbar">
         <div class="section-list-main">
         {{> components/notice_card}}
         </div>
