--- a/src/views/partials/recent_post_details_body.hbs
+++ b/src/views/partials/recent_post_details_body.hbs
@@ -1,5 +1,5 @@
 <div class="container min-h-screen bg-primary-0">
-    <div class="back-area fixed top-0 left-0 right-0 max-w-[450px] mx-auto w-full flex items-center justify-start bg-primary-0">
+    <div class="back-area max-w-[450px] mx-auto w-full flex items-center justify-start bg-primary-0">
         <div class="container py-[10px] px-[20px] ">
             <div class="back-area-icon">
                 <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <div class="section-details pb-[50px] px-[20px] pt-[47px]">
+    <div class="section-details pb-[3px] px-[20px] pt-[3px] h-[calc(100vh-94px)] overflow-y-auto no-scrollbar">
         <div class="section-details-main">
 
             <div class="post-details mb-[24px]">
@@ -68,7 +68,7 @@
 
 
     <div class="comment-form">
-        <form action="#" class="fixed bottom-0 left-0 right-0 max-w-[450px] mx-auto w-full bg-primary-0.6 border-t border-solid border-primary-0.8 ">
+        <form action="#" class="max-w-[450px] mx-auto w-full bg-primary-0.6 border-t border-solid border-primary-0.8 ">
             <div class="form-main flex justify-start items-center">
                 <div class="form-input w-full">
                     <input class="w-full bg-primary-0.7 outline-none border-none font-satoshi not-italic text-sm font-medium py-3 px-4 text-primary-10" type="text" placeholder="Comment">
