--- a/src/views/partials/sign_in_body.hbs
+++ b/src/views/partials/sign_in_body.hbs
@@ -1,11 +1,11 @@
-<div class="container min-h-screen bg-primary-0">
+<div class="container h-screen bg-primary-0">
     <div class="sign-up-banner relative z-0">
         <div class="sign-up-banner-main">
-            <img class="w-full object-contain mx-auto" src="/images/png/sign-in-banner.png" alt="">
+            <img class="w-full object-contain mx-auto h-[350px]" src="/images/png/sign-in-banner.png" alt="">
         </div>
     </div><!--END SIGN UP BANNER AREA --->
 
-    <div class="sign-in-area shadow-md bg-primary-0 relative pt-[40px] top-1 z-11" >
+    <div class="sign-in-area shadow-md bg-primary-0 relative pt-[40px] top-1 z-11 h-[calc(100vh-355px)] overflow-y-auto" >
         <div class="sign-up-area-title  px-[28px] mb-[30px]">
             <h3 class="font-satoshi font-bold not-italic text-26/[44px]">Sign in</h3>
         </div>
