--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -27,3 +27,15 @@ body {
     border-radius: 50px 50px 0px 0px;
     min-height: calc(100vh - 400px);
 }
+
+
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;  
+  }
+}
