--- a/src/views/partials/components/bottom_nav.hbs
+++ b/src/views/partials/components/bottom_nav.hbs
@@ -1,4 +1,4 @@
-<div class="bottom-nav bg-primary-0 fixed bottom-0 max-w-[450px] right-0 mx-auto left-0 w-full h-auto shadow-custom pt-[13px] pb-[7px]">
+<div class="bottom-nav bg-primary-0  max-w-[450px]  mx-auto left-0 w-full h-auto shadow-custom pt-[13px] pb-[7px]">
     <div class="container min-h-auto ">
         <div class="bottom-nav-main">
             <ul class="flex items-center justify-between gap-3">
