--- a/src/views/partials/post_body.hbs
+++ b/src/views/partials/post_body.hbs
@@ -1,4 +1,4 @@
-<div class="container min-h-screen bg-primary-0">
+<div class="container h-screen bg-primary-0">
     <div class="post-header-area flex bg-primary-0 justify-between items-center py-4 px-4">
         <div class="post-user flex gap-2 justify-start items-center">
             <div class="user-img">
@@ -13,7 +13,7 @@
             <img src="/images/svg/cross.svg" alt="" class="w-6 h-6 cursor-pointer">
         </div>
     </div>
-    <div class="post-form-area px-4 mt-4">
+    <div class="post-form-area px-4 mt-4 h-[calc(100vh-165px)] overflow-y-auto no-scrollbar">
         <form action="">
             <div class="form-input mb-4">
                 <input type="text" placeholder="Title"
