live match page and match details page

--- a/src/views/partials/post_body.hbs
+++ b/src/views/partials/post_body.hbs
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="cross-bar">
-            <img src="/images/svg/cross.svg" alt="" class="w-6 h-6 cursor-pointer">
+            <a href="recentPost.html"><img src="/images/svg/cross.svg" alt="" class="w-6 h-6 cursor-pointer"></a>
         </div>
     </div>
     <div class="post-form-area px-4 mt-4 h-[calc(100vh-165px)] overflow-y-auto no-scrollbar">
