--- a/src/views/partials/recent_post_body.hbs
+++ b/src/views/partials/recent_post_body.hbs
@@ -17,7 +17,7 @@
     </div>
 
     <div class="add-post">
-        <span class="w-[68px] text-[22px] cursor-pointer fixed right-[20px] bottom-[120px] h-[68px] rounded-full flex items-center justify-center bg-primary text-primary-0"><i class="fa fa-plus"></i></span>
+        <a href="post.html" class="w-[68px] text-[22px] cursor-pointer fixed right-[20px] bottom-[120px] h-[68px] rounded-full flex items-center justify-center bg-primary text-primary-0"><i class="fa fa-plus"></i></a>
     </div>
 
 </div>
