--- a/src/views/partials/match_details_body.hbs
+++ b/src/views/partials/match_details_body.hbs
@@ -15,8 +15,7 @@
         <div class="match-details-main">
             <div class="match-details-top">
                 <div class="match-details-img">
-                    <img class="w-full block object-contain" src="/images/png/스크린샷 2024-02-14 오후 4.59 1.png"
-                        alt="">
+                    <img class="w-full block object-contain" src="/images/png/details.png" alt="">
                 </div>
 
                 <div class="match-details-tab bg-primary-0 shadow-custom-5 px-[19px] pt-[6px]">
@@ -36,7 +35,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="match-details-body px-[20px] py-[10px] h-[calc(100vh-398px)] overflow-y-auto no-scrollbar">
+            <div class="match-details-body px-[20px] py-[10px] h-[calc(100vh-464px)] overflow-y-auto no-scrollbar">
                 <div class="comment mb-[16px]">
                     <div class="comment-main flex items-center justify-start gap-[8px]">
                         <div class="user  min-w-[40px] ">
