--- a/src/views/partials/match_details_body.hbs
+++ b/src/views/partials/match_details_body.hbs
@@ -1,6 +1,6 @@
 <div class="container min-h-screen bg-primary-0">
     <div class="back-area max-w-[450px] mx-auto w-full flex items-center justify-start bg-primary-14">
-        <div class="container py-[10px] px-[20px] ">
+        <div class="container py-[10px] px-[15px] ">
             <div class="back-area-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 28 28" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -35,7 +35,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="match-details-body px-[20px] py-[10px] h-[calc(100vh-464px)] overflow-y-auto no-scrollbar">
+            <div
+                class="match-details-body px-[20px] py-[10px] h-[calc(100vh-398px)] sm:h-[calc(100vh-465px)] overflow-y-auto no-scrollbar">
                 <div class="comment mb-[16px]">
                     <div class="comment-main flex items-center justify-start gap-[8px]">
                         <div class="user  min-w-[40px] ">
@@ -180,4 +181,9 @@
             </div>
         </form>
     </div>
+
+    <div
+        class="gradient-shape bg-bottom-gradient-1 w-full max-w-[450px] fixed bottom-[49px] h-[50px] left-0 right-0 mx-auto">
+    </div>
+
 </div>
