--- a/src/views/partials/components/bottom_nav.hbs
+++ b/src/views/partials/components/bottom_nav.hbs
@@ -1,5 +1,4 @@
-<div class="bottom-nav bg-primary-0  max-w-[450px]  mx-auto left-0 w-full h-auto shadow-custom pt-[13px] pb-[7px]">
-    <div class="container min-h-auto ">
+<div class="bottom-nav bg-primary-0  max-w-[450px]  mx-auto shadow-custom pt-[13px] pb-[7px]">
         <div class="bottom-nav-main">
             <ul class="flex items-center justify-between gap-3">
                 <li class="w-full text-center flex justify-center items-center gap-[11px] flex-col py-1 px-1">
@@ -36,6 +35,4 @@
                 </li>
             </ul>
         </div>
-    </div>
-
 </div>
