--- a/src/views/partials/account_body.hbs
+++ b/src/views/partials/account_body.hbs
@@ -1,7 +1,7 @@
 <div class="container h-screen bg-primary-0 pb-[75px]">
-    <div class="back-area max-w-[450px] mx-auto relative w-full px-[28px] pt-[20px] pb-[10px] flex items-center justify-center bg-primary-0">
+    <div class="back-area max-w-[450px] mx-auto relative px-[28px] pt-[20px] pb-[10px]  bg-primary-0">
         <div class="back-area-icon absolute left-[28px] top-[20px]">
-            <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
+           <a href="liveMatch.html"> <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
         <div class="back-area-text w-full text-center">
             <h3 class="font-satoshi font-bold text-20/[23px] text-primary-10">Settings</h3>
@@ -12,9 +12,7 @@
         <div class="section-account-main">
             <div class="user-profile">
                 {{> components/user_profile}}
-            </div>
-
-
+            </div>{{!--END ACCOUNT PROFILE--}}
             <div class="account-menu mt-[60px]">
                 <ul>
                     <li class="mb-5">
@@ -46,20 +44,18 @@
 
                 </ul>
                 <div class="log-out-btn mt-[80px]">
-                    <a
-                        class="text-center h-[56px] flex items-center justify-center w-full bg-primary-0.4 py-3 px-5 font-satoshi font-bold text-base/[20px] text-primary-10 rounded-[20px]">Log
+                    <a data-modal="modal-1"
+                        class="text-center cursor-pointer h-[56px] flex items-center justify-center w-full bg-primary-0.4 py-3 px-5 font-satoshi font-bold text-base/[20px] text-primary-10 rounded-[20px]">Log
                         out</a>
                 </div>
-            </div>
-
-
-
+            </div>{{!--END ACCOUNT MENU--}}
         </div>
     </div>
 
-
-    <div class="bottom-nav ">
+    <div class="bottom-nav">
         {{> components/bottom_nav}}
-    </div>
-
+    </div>{{!--END ACCOUNT BOTTOM NAV--}}
+    <div class="modal">
+        {{> components/logout_modal}}
+    </div>{{!--END LOGOUT MODAL AREA--}}
 </div>
