--- a/src/views/partials/match_details_body.hbs
+++ b/src/views/partials/match_details_body.hbs
@@ -2,11 +2,11 @@
     <div class="back-area max-w-[450px] mx-auto w-full flex items-center justify-start bg-primary-14">
         <div class="container py-[10px] px-[15px] ">
             <div class="back-area-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 28 28" fill="none">
+               <a href="liveMatch.html"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 28 28" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M18.3248 5.00852C18.5436 5.2273 18.6664 5.52399 18.6664 5.83335C18.6664 6.14271 18.5436 6.4394 18.3248 6.65818L10.983 14L18.3248 21.3418C18.5374 21.5619 18.655 21.8566 18.6523 22.1625C18.6496 22.4684 18.5269 22.761 18.3106 22.9773C18.0943 23.1936 17.8017 23.3163 17.4958 23.319C17.1899 23.3216 16.8952 23.204 16.6752 22.9915L8.50852 14.8248C8.2898 14.6061 8.16693 14.3094 8.16693 14C8.16693 13.6907 8.2898 13.394 8.50852 13.1752L16.6752 5.00852C16.894 4.7898 17.1907 4.66693 17.5 4.66693C17.8094 4.66693 18.1061 4.7898 18.3248 5.00852Z"
                         fill="white" />
-                </svg>
+                </svg></a>
             </div>
         </div>
     </div>
