--- a/src/views/partials/forgot_password_body.hbs
+++ b/src/views/partials/forgot_password_body.hbs
@@ -1,10 +1,10 @@
 <div class="container min-h-screen bg-primary-0">
-    <div class="back-area py-4 px-[26px]">
+    <div class="back-area pb-4 pt-[30px] px-[15px]">
         <div class="back-area-icon">
             <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
         </div>
     </div>
-    <div class="forgot-section mt-[50px]  px-[26px]">
+    <div class="forgot-section mt-[50px]  px-[15px]">
           <div class="forgot-title mb-[46px] text-center">
                 <h3 class="font-satoshi font-bold not-italic text-[24px]/[30px] mb-[10px]">Forget Password?</h3>
                 <p class="text-primary-1 text-base font-satoshi font-medium not-italic">Enter your email or phone number</p>
