--- a/src/views/partials/notice_details_body.hbs
+++ b/src/views/partials/notice_details_body.hbs
@@ -1,6 +1,6 @@
 <div class="container h-screen bg-primary-0">
-    <div class="back-area max-w-[450px] mx-auto relative w-full px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
-        <div class="back-area-icon absolute left-[28px] top-[15px]">
+    <div class="back-area max-w-[450px] mx-auto relative w-full px-[15px] pb-[15px] pt-[30px] flex items-center justify-center bg-primary-0">
+        <div class="back-area-icon absolute left-[15px] top-[30px]">
             <a href="noticeList.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
         <div class="back-area-text w-full text-center">
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="section-details px-[25px] pt-[12px] pb-[20px] h-[calc(100vh-53px)] overflow-y-auto no-scrollbar">
+    <div class="section-details px-[15px] pt-[12px] pb-[20px] h-[calc(100vh-68px)] overflow-y-auto">
         <div class="section-details-main">
 
             <div class="notice-details-img mb-3">
