--- a/src/views/partials/notice_list_body.hbs
+++ b/src/views/partials/notice_list_body.hbs
@@ -1,6 +1,6 @@
 <div class="container h-screen bg-primary-0">
-    <div class="back-area max-w-[450px] mx-auto w-full relative px-[25px] py-[15px] flex items-center justify-center bg-primary-0">
-        <div class="back-area-icon absolute left-[28px] top-[15px]">
+    <div class="back-area max-w-[450px] mx-auto w-full relative px-[15px] pb-[15px] pt-[25px] flex items-center justify-center bg-primary-0">
+        <div class="back-area-icon absolute left-[15px] top-[25px]">
             <a href="account.html"><img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
         <div class="back-area-text w-full text-center">
@@ -9,7 +9,7 @@
     </div>
 
 
-    <div class="section-list  px-[25px] pt-[12px] pb-[20px] h-[calc(100vh-53px)] overflow-y-auto no-scrollbar">
+    <div class="section-list  px-[15px] pt-[12px] pb-[20px] h-[calc(100vh-63px)] overflow-y-auto">
         <div class="section-list-main">
         {{> components/notice_card}}
         </div>
