--- a/src/views/partials/recent_post_details_body.hbs
+++ b/src/views/partials/recent_post_details_body.hbs
@@ -1,13 +1,13 @@
 <div class="container min-h-screen bg-primary-0">
     <div class="back-area max-w-[450px] mx-auto w-full flex items-center justify-start bg-primary-0">
-        <div class="container py-[10px] px-[20px] ">
+        <div class="container pb-[10px] pt-[30px] px-[15px] ">
             <div class="back-area-icon">
                 <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt="">
             </div>
         </div>
     </div>
 
-    <div class="section-details pb-[3px] px-[20px] pt-[3px] h-[calc(100vh-94px)] overflow-y-auto no-scrollbar">
+    <div class="section-details pb-[3px] px-[15px] pt-[3px] h-[calc(100vh-114px)] overflow-y-auto">
         <div class="section-details-main">
 
             <div class="post-details mb-[24px]">
