--- a/src/sass/_swipper.scss
+++ b/src/sass/_swipper.scss
@@ -1,4 +1,5 @@
-/*** SWIPER SLIDER  CUSTOMIZATION ****/
+/* --- SWIPER SLIDER  CUSTOMIZATION --- */
+
 .section-slide-area{
     .swiper{
         padding-bottom: 35px;
@@ -16,10 +17,29 @@
    
 }
 
-
 .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* --- Match Details Slide Customize --- */
+.match-live-details{
+    .swiper{
+        padding-bottom: 25px;
+    }
+    .swiper-pagination{
+        bottom: 0px!important;
+    }
+    .swiper-pagination-bullet{
+        background-color: #EBEBEB!important;
+        opacity: 1;
+        width: 6px;
+        height: 6px;
+        &.swiper-pagination-bullet-active{
+            background-color: #fff!important;
+        }
+    }
+   
 }
