--- a/src/views/partials/user_about_body.hbs
+++ b/src/views/partials/user_about_body.hbs
@@ -1,16 +1,16 @@
 <div class="container h-screen bg-primary-0.1">
-      <div class="back-area max-w-[450px] mx-auto w-full px-[24px] pt-[24px] pb-[10px] flex items-center justify-start">
+      <div class="back-area max-w-[450px] mx-auto w-full px-[15px] pt-[30px] pb-[10px] flex items-center justify-start">
         <div class="back-area-icon">
            <a href="account.html"> <img class="w-6 h-6 cursor-pointer" src="/images/svg/left-angle.svg" alt=""></a>
         </div>
     </div>
 
-    <div class="section-account pt-[4px] h-[calc(100vh-142px)] overflow-y-auto no-scrollbar">
+    <div class="section-account pt-[4px] h-[calc(100vh-148px)] overflow-y-auto">
         <div class="section-account-main">
-            <div class="user-profile px-[28px]">
+            <div class="user-profile px-[15px]">
                 {{> components/user_profile}}
             </div>
-            <div class="account-about bg-primary-0 px-[28px]  pt-[28px] pb-[20px] overflow-y-auto  rounded-t-[20px] shadow-custom-2 mt-[56px] h-[calc(100vh-406px)] no-scrollbar">
+            <div class="account-about bg-primary-0 px-[15px]  pt-[28px] pb-[20px] overflow-y-auto  rounded-t-[20px] shadow-custom-2 mt-[56px] h-[calc(100vh-406px)]">
                 <h3 class="font-satoshi font-bold mb-3 text-primary-10 text-[18px]/[24px]">About</h3>
                 <p class="font-satoshi font-medium not-italic text-primary-1 text-[14px]/[25px] mb-4">I am Thai Dieu. I am Owner of SERO currently pursuing a major in Management Economics and Finance at the University of Guelph, Ontario, Canada. Please let me know if I can help you in any way.This helps remove loose dirt, dust, and debris from surface and crevices of the sofa.Different  materials and finishes require specific care,</p>
             </div>
@@ -22,7 +22,7 @@
 
 
     <div class="bottom-nav ">
-        {{> components/bottom_nav}}
+         {{> components/bottom_nav activeHome=false activePost=false activeAccount=true activeSetting=false}}
     </div>
 
 </div>
