--- a/src/views/partials/match_details_body.hbs
+++ b/src/views/partials/match_details_body.hbs
@@ -24,21 +24,21 @@
 
                                     <div class="live-score-img">
                                         <img class="max-w-[270px] h-[170px] w-full mx-auto"
-                                            src="/images/png/스크린샷 2024-02-14 오후 4.59 1.png" alt="">
+                                            src="/images/png/live-details.png" alt="">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
 
                                     <div class="live-score-img">
                                         <img class="max-w-[270px] h-[170px] w-full mx-auto"
-                                            src="/images/png/스크린샷 2024-02-14 오후 4.59 1.png" alt="">
+                                            src="/images/png/live-details.png" alt="">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
 
                                     <div class="live-score-img">
-                                        <img class="max-w-[270px] h-[170px] w-full mx-auto"
-                                            src="/images/png/스크린샷 2024-02-14 오후 4.59 1.png" alt="">
+                                      <img class="max-w-[270px] h-[170px] w-full mx-auto"
+                                            src="/images/png/live-details.png" alt="">
                                     </div>
                                 </div>
                             </div>
